--- a/RecupereJa/Views/Usuario/Login.cshtml
+++ b/RecupereJa/Views/Usuario/Login.cshtml
@@ -107,7 +107,7 @@
                 <h2><b>Login</b></h2>
             </header>
 
-            <<form asp-controller="Login" asp-action="Index" method="post">>
+            <<form asp-controller="Home" asp-action="Index" method="post">>
                 <label for="email">Email:</label>
                 <input asp-for="Identificador " name="identificador" placeholder="Nome de usuário ou E-mail" required>
 
