--- a/RecupereJa/Views/Usuario/Login.cshtml
+++ b/RecupereJa/Views/Usuario/Login.cshtml
@@ -124,3 +124,20 @@
     </div>
 </body>
 </html>
+
+
+@* <form asp-action="Login" method="post" novalidate>
+    <div class="form-group mb-3">
+        <label asp-for="Username"></label>
+        <input asp-for="Username" class="form-control" placeholder="Digite seu email" autocomplete="E-mail" />
+        <span asp-validation-for="Username" class="text-danger"></span>
+    </div>
+    <div class="form-group mb-4">
+        <label asp-for="Password"></label>
+        <input asp-for="Password" class="form-control" placeholder="Digite sua senha" type="password" autocomplete="current-password" />
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
+    <div class="d-grid">
+        <button type="submit" class="btn btn-primary">Entrar</button>
+</form>
+</div> *@
