--- a/RecupereJa/Views/Usuario/Registrar.cshtml
+++ b/RecupereJa/Views/Usuario/Registrar.cshtml
@@ -143,3 +143,39 @@
     </div>
 </body>
 </html>
+
+@*<div class="register-container">
+	<h2 class="form-title">Registro de Usuário</h2>
+
+	@if (TempData["Sucesso"] != null)
+	{
+		<div class="alert alert-success text-center">
+			@TempData["Sucesso"]
+		</div>
+	}
+
+	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+	<form asp-action="Registrar" asp-controller="Usuario" method="post">
+
+		<div class="mb-3">
+			@Html.LabelFor(m => m.Nome, new { @class = "form-label" })
+			@Html.TextBoxFor(m => m.Nome, new { placeholder = "Digite seu nome", @class = "form-control" })
+			@Html.ValidationMessageFor(m => m.Nome, "", new { @class = "text-danger" })
+		</div>
+
+		<div class="mb-3">
+			@Html.LabelFor(m => m.Email, new { @class = "form-label" })
+			@Html.TextBoxFor(m => m.Email, new { placeholder = "Digite seu email", @class = "form-control" })
+			@Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+		</div>
+
+		<div class="mb-4">
+			@Html.LabelFor(m => m.Senha, new { @class = "form-label" })
+			@Html.PasswordFor(m => m.Senha, new { placeholder = "Digite uma senha segura", @class = "form-control" })
+			@Html.ValidationMessageFor(m => m.Senha, "", new { @class = "text-danger" })
+		</div>
+
+		<button type="submit" class="btn btn-primary w-100">Registrar</button>
+	</form>
+
+</div> *@
